k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: mern-app-ns
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      name: backend-pod
      namespace: mern-app-ns
      labels:
        app: server
    spec:
      containers:
        - name: mern-backend
          image: dhruvmoradiya69000/mern-backend:latest
          ports:
            - containerPort: 5050
