k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: mern-app-ns
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      namespace: mern-app-ns
      labels:
        app: frontend
    spec:
      containers:
      - name: mern-frontend
        image: dhruvmoradiya69000/mern-frontend:latest
        ports:
        - containerPort: 80
