k8s/mongo-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: mern-app-ns
  labels:
    app: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  serviceName: mongodb-headless
  replicas: 1
  template:
    metadata:
      name: mongodb-pod
      namespace: mern-app-ns
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
      labels:
        app: mongodb
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
