k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: mern-app-ns
  labels:
    app: server
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
