k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-headless
  namespace: mern-app-ns
  labels:
    app: mongodb
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
